--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-testd
+<html>
+  <head>
+  </head>
+  <body>
+    <div id="particles-js"></div>
+
+    <script src="particles.js"></script>
+  </body>
+</html>
